# run_splink_benchmarks_in_ec2

./: .gitignore  README.md  metrics_config.json  pyproject.toml  requirements.txt  run.py  run_tests.sh
benchmarking_utils/: cloudwatch.py
benchmarks/: conftest.py  test_3m_synthetic.py  test_7m_synthetic.py  test_splink_50k_synthetic.py
